--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Monster Examine
+author=dezy
+description=Show any monster's stats in the sidebar.
+tags=monster,examine,stats,level,weakness,weak
+plugins=com.monsterexamine.MonsterExaminePlugin
