--- a/build.gradle
+++ b/build.gradle
@@ -17,13 +17,11 @@ dependencies {
 
 	compileOnly 'org.projectlombok:lombok:1.18.30'
 	annotationProcessor 'org.projectlombok:lombok:1.18.30'
+	implementation 'com.google.code.gson:gson:2.10.1'
 
 	testImplementation 'junit:junit:4.12'
 	testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
 	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
-
-	// jsoup HTML parser library @ https://jsoup.org/
-	implementation 'org.jsoup:jsoup:1.17.2'
 }
 
 group = 'com.example'
